new element is added

--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="container" style="margin: auto; width: 640px; margin: auto;">
+	<div></div>
     </div>
   </body>
 </html>
