--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
   <body>
     <div id="container" style="margin: auto; width: 640px; margin: auto;">
 	<div></div>
+	<div></div>
     </div>
   </body>
 </html>
